--- a/src/scss/components/_property_nav.scss
+++ b/src/scss/components/_property_nav.scss
@@ -11,7 +11,7 @@
 
 
 .Select-placeholder, .sort-bar, .Select-menu {
-	font-family: $header-font-medium;
+	font-family: $hFontM;
 	font-size: 13px;
 }
 
