--- a/src/scss/components/_twitter_block.scss
+++ b/src/scss/components/_twitter_block.scss
@@ -21,7 +21,7 @@
 	.tweet {
 		padding-top: 10px;
 		p {
-			font-family: $base-font-family;
+			font-family: $bFont;
 			font-size: 14px;
 			line-height: 19px;
 		}
