--- a/src/scss/modules/_buttons.scss
+++ b/src/scss/modules/_buttons.scss
@@ -33,7 +33,7 @@
 		color: #cccccc;
 	}
 	span {
-		font-family: $header-font-medium;
+		font-family: $hFontM;
 		margin-left: 10px;
 	}
 	&:hover {
