--- a/src/scss/modules/_featured_post.scss
+++ b/src/scss/modules/_featured_post.scss
@@ -10,10 +10,10 @@
 	h3 {
 		color: $text-green;
 		margin-top: 0;
-		font-family: $header-font-medium;
+		font-family: $hFontM;
 	}
 	h2 {
-		font-family: $header-font-family-medium-italic;
+		font-family: $hFontMI;
 		font-size: 34px;
 		line-height: 43px;
 	}
