--- a/src/scss/modules/_quotes.scss
+++ b/src/scss/modules/_quotes.scss
@@ -30,7 +30,7 @@
 
 .quote-content {
 	display: inline-block;
-	font-family: $header-font-family-medium-italic;
+	font-family: $hFontMI;
 	font-size: 18px;
 	line-height: 30px;
 	z-index: 100;
