--- a/statamic/_themes/main/partials/property_tile_agent.html
+++ b/statamic/_themes/main/partials/property_tile_agent.html
@@ -1,7 +1,7 @@
 {{ if no_results }}
 {{ else }}
 {{ if first }}
-<div class="agent-properties background-gray">
+<div class="agent-properties bg-gray">
 <h1>Current Listings</h1>
 {{ if total_results == 1}}
 <div class="carousel_tile carousel_tile_1 main_tile">
