--- a/statamic/_themes/main/partials/recent_transactions_rental.html
+++ b/statamic/_themes/main/partials/recent_transactions_rental.html
@@ -3,19 +3,19 @@
 {{ else }}
 	{{ if first }}
 	<div class="recent-transactions">
-	<h2>Rentals</h2>
+	<h3>Rentals</h3>
 	<ul>
 	<li>
-		<h3>Property Name</h3>
+		<span>Property Name</span>
 	</li>
 	<li>
-		<h3>Property Type</h3>
+		<span>Property Type</span>
 	</li>
 	<li>
-		<h3>Neighborhood</h3>
+		<span>Neighborhood</span>
 	</li>
 	<li>
-		<h3>Price</h3>
+		<span>Price</span>
 	</li>
 
 	</ul>
