--- a/statamic/_themes/main/templates/landing.html
+++ b/statamic/_themes/main/templates/landing.html
@@ -49,9 +49,9 @@
 				</a>
 		</div>
 	</section>
-	<section class="circle-icon seafoam-bg" id="featured-properties">
+	<section class="circle-icon bg-seafoam" id="featured-properties">
 		<div class="circle-leader">
-			<div class="circle light-gray-bg">
+			<div class="circle bg-seafoam">
 				{{ theme:partial src="svg/home_building" }}
 			</div>
 			<h4>FEATURED NEW YORK PROPERTIES</h4>
@@ -74,7 +74,7 @@
 		<div class="container">
 			<div class="grid-4 centered">
 				<a data-toggle="modal" data-target="#contact-modal" href="#" class="insight-tile">
-					<h2>Get a Valuation</h2>
+					<h3>Get a Valuation</h3>
 					<p>Make a more informed decision about your property with a Garfield Valuation. Make a more informed decision about your property with a Garfield Valuation</p>
 					<span>GET IN CONTACT ></span>
 				</a>
@@ -82,7 +82,7 @@
 		{{ insights }}
 			<div class="grid-4 centered">
 				<a href="{{ link }}" class="insight-tile">
-					<h2>{{ headline }}</h2>
+					<h3>{{ headline }}</h3>
 					<p>{{ info }}</p>
 					<span>{{ link_title }} ></span>
 				</a>
