--- a/statamic/_themes/main/templates/neighborhood.html
+++ b/statamic/_themes/main/templates/neighborhood.html
@@ -2,7 +2,7 @@
 		<h1>{{ tag_line }}</h1>
 		<h3>{{ sub_tag_line}}</h3>
 	</section>
-<section class="background-gray">
+<section class="bg-gray">
 <div class="container">
 <ul class="grid">
 	
