--- a/statamic/_themes/main/templates/neighborhood_individual.html
+++ b/statamic/_themes/main/templates/neighborhood_individual.html
@@ -20,7 +20,7 @@
 			{{ description }}
 		</div>
 	</section>
-	<section class="content neighborhood background-gray">
+	<section class="content neighborhood bg-gray">
 		<a id="location" class="secondary-nav-link"></a>
 		<div class="container">
 			<h3>location</h3>
@@ -75,7 +75,7 @@
 			<p class="light">* These numbers are averages and fluctuate frequently. Contact us for the most up-to-date data on NYC neighborhoods and blocks.</p>
 		</div>
 	</section>
-	<section class="content dark-seafoam-bg">
+	<section class="content dark-bg-seafoam">
 		<a id="other_properties" class="secondary-nav-link"></a>
 		<div class="container">
 			<h3>CURRENT PROPERTIES IN THIS NEIGHBORHOOD</h3>
@@ -88,7 +88,7 @@
 			{{ /entries:listing }}
 		</div>
 	</section>
-	<section id="other_neighborhoods" class="content background-gray">
+	<section id="other_neighborhoods" class="content bg-gray">
 		<div class="container">
 			<h3>Other Neighborhoods</h3>
 			<ul class="grid">
