--- a/statamic/_themes/main/templates/property_lease.html
+++ b/statamic/_themes/main/templates/property_lease.html
@@ -1,4 +1,4 @@
-<section class="leading property-page background-gray">
+<section class="leading property-page bg-gray">
 	<div class="container">
 
 		<aside class="sticky">
@@ -296,6 +296,7 @@
 			{{ theme:partial src="property_tile" use_context="true" }}
 			{{ endif }}
 		{{ if last }}        
+		</div>
 		</div>
 		</div>
 	</div>
