--- a/statamic/_themes/main/templates/property_sale.html
+++ b/statamic/_themes/main/templates/property_sale.html
@@ -1,4 +1,4 @@
-<section class="leading property-page background-gray">
+<section class="leading property-page bg-gray">
 	<div class="container">
 
 		<aside class="sticky">
@@ -12,8 +12,8 @@
 					<div class="agent-details">
 						<a href="{{ url }}"><h3>{{ title }}</h3></a>
 						<ul>
-							<li>{{ theme:partial src="svg/phone" }} <span>{{ phone }}</span></li>
-							<li>{{ theme:partial src="svg/mail" }} <span>{{ email|link }}</span></li>
+							<li>{{ theme:partial src="svg/phone" }} {{ phone }}</li>
+							<li>{{ theme:partial src="svg/mail" }} {{ email|link }}</li>
 						</ul>
 					</div>
 				</div>
