--- a/statamic/_themes/main/templates/reports.html
+++ b/statamic/_themes/main/templates/reports.html
@@ -2,7 +2,7 @@
 	<h1>{{ header }}</h1>
 	<h3>{{ sub_header }}</h3>
 </section>
-<section class="darkest-seafoam-bg">
+<section class="darkest-bg-seafoam">
 	<div class="container reports">
 		<h3 class="centered">OUR LATEST REPORTS</h3>
 		<ul class="grid-constrained">
@@ -36,7 +36,7 @@
 		</ul>
 	</div>
 </section>
-<section class="background-gray">
+<section class="bg-gray">
 	<div class="container reports signup">
 		<h2>Register</h2>
 		<h3>Fill in the form to get the reports hot off the presses</h3>
