--- a/statamic/_themes/main/templates/services.html
+++ b/statamic/_themes/main/templates/services.html
@@ -31,7 +31,7 @@
 				<div class="quote-slider">
 					{{ individual_quote }}
 					<div>
-						<div class="circle background-light-gray">
+						<div class="circle bg-light-gray">
 							<div class="quote">
 							{{ if main }}
 								<div class="quote-content">
@@ -59,7 +59,7 @@
 			</aside>
 		</div>
 	</section>
-	<section class="content services seafoam-bg">
+	<section class="content services bg-seafoam">
 		<a id="trust" class="secondary-nav-link"></a>
 		<div class="container">
 			<main>
@@ -131,7 +131,7 @@
 				<div class="quote-slider">
 				{{ institution_quote }}
 					<div>
-						<div class="circle background-light-gray">
+						<div class="circle bg-light-gray">
 							<div class="quote">
 							{{ if main }}
 								<div class="quote-content">
@@ -161,7 +161,7 @@
 			</aside>
 		</div>
 	</section>
-	<section class="content services background-light-gray">
+	<section class="content services bg-light-gray">
 		<a id="buyers" class="secondary-nav-link"></a>
 		<div class="container">
 		<main>
