--- a/src/scss/_utils.scss
+++ b/src/scss/_utils.scss
@@ -1,6 +1,6 @@
 
 // Font Family
-// $base-font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+// $bFont: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
 
 
 @font-face {
@@ -77,18 +77,23 @@ $text-green: #009B77;
 $dark-gray: #25282A;
 $light-gray: #ECEBEC;
 $similar-properties-gray: #E5E4E4;
-$background-gray: #F2F2F2;
-$background-light-gray: #F7F7F7;
+$bg-gray: #F2F2F2;
+$bg-light-gray: #F7F7F7;
 $header-font-color: #25282A;
 $light-font-color: #A7A4A4;
 $agents-background: #F5F5F5;
-$seafoam-bg: #F4FBF9;
-$dark-seafoam-bg: #e4f4f1;
-$darkest-seafoam-bg: #CEEBE7;
+$bg-seafoam: #F4FBF9;
+$dark-bg-seafoam: #e4f4f1;
+$darkest-bg-seafoam: #CEEBE7;
 $red: #FF0000;
 $modal-text: #CCCCCC;
-$light-blue: #E6F1FA;
+$bg-light-blue: #E6F1FA;
 $quote-gray: #7a7a7a;
+
+// breakpoints
+$small: 768px;
+$medium: 992px;
+$large: 1280px;
 
 
 // fonts
@@ -96,31 +101,97 @@ $base-font-color: #404041;
 $light-font-color: #999999;
 
 // Defining font family
-$fontDefault: Helvetica, Arial, sans-serif !default;
-$fontHighlight: 'Roboto Condensed', Helvetica, sans-serif !default;
-$fontIcon: 'icons' !default;
-
-$base-font-family: Arial, "Lucida Grande", sans-serif; 
-$header-font-medium: "Copernicus-Medium", georgia, serif;
-$header-font-family: "Copernicus-Semibold", georgia, serif;
-$header-font-bold: "Copernicus-Bold", georgia, serif;
-$header-font-extra-bold: "Copernicus-ExtraBold", georgia, serif;
-$header-font-family-book-italic: "Copernicus-BookItalic", georgia, serif;
-$header-font-family-medium-italic: "Copernicus-MediumItalic", georgia, serif;
-$header-font-family-book: "Copernicus-Book";
+$bFont: Arial, "Lucida Grande", sans-serif; 
+$hFontBI: "Copernicus-BookItalic", georgia, serif;
+$hFontM: "Copernicus-Medium", georgia, serif;
+$hFontMI: "Copernicus-MediumItalic", georgia, serif;
+$hFontB: "Copernicus-Bold", georgia, serif;
 
 // Defining font sizes
-$fontSmall: 13px !default;
-$fontBase: 16px  !default;
-$fontMedium: 22px !default;
-$fontLarge: 28px !default;
-$fontXLarge: 34px !default;
-$fontXXLarge: 50px !default;
-$fontHuge: 70px !default;
+$fontMini: 12px;
+$fontTiny: 14px;
+$fontSmall: 15px;
+$fontBase: 16px ;
+$fontSmallMedium: 18px;
+$fontMedium: 20px;
+$fontLargeMedium: 22px;
+$fontLarge: 28px;
+$fontXLarge: 34px;
+$fontXXLarge: 50px;
+$fontHuge: 70px;
+
 
 @mixin hhuge {
-    font-family: $header-font-family-book-italic;
-    font-size: 70px;
+    font-family: $hFontBI;
+    font-size: $fontHuge;
+}
+
+@mixin hxxlarge {
+    font-family: $hFontBI;
+    font-size: $fontXXLarge;
+    line-height: 1.2*$fontXXLarge;
+}
+
+@mixin hxlarge ($font) {
+    font-family: $font;
+    font-size: $fontXLarge;
+    line-height: 1.3*$fontXLarge;
+}
+
+@mixin hlarge {
+    font-family: $hFontMI;
+    font-size: $fontLarge;
+    line-height: 1.2*$fontLarge;
+}
+
+@mixin hlmedium ($font) {
+    font-family: $font;
+    font-size: $fontLargeMedium;
+    line-height: 1.5*$fontLargeMedium;
+}
+
+@mixin hmedium {
+    font-family: $hFontM;
+    font-size: $fontMedium;
+}
+
+@mixin hsmedium ($font){
+    font-family: $font;
+    font-size: $fontSmallMedium;
+    line-height: 1.55*$fontSmallMedium;
+}
+
+@mixin hbase ($font){
+    font-family: $font;
+    font-size: $fontBase;
+    line-height: 1.625*$fontBase;
+}
+
+@mixin bbase {
+    font-size: $fontBase;
+    font-family: $bFont;
+}
+
+@mixin bbasebold {
+    font-size: $fontBase;
+    font-family: $bFont;
+    font-weight: 700;
+}
+
+@mixin hsmall ($font) {
+    font-family: $font;
+    font-size: $fontSmall;
+    line-height: 1.45*$fontSmall;
+}
+
+@mixin btiny {
+    font-family: $bFont;
+    font-size: $fontTiny;
+}
+
+@mixin hmin {
+    font-family: $bFont;
+    font-size: $fontMini;
 }
 
 
