--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -7,7 +7,7 @@ header {
 	height: 78px;
 	background-color: #fff;
 	z-index: 100;
-	border-bottom: 1px solid darken($background-gray,12%);
+	border-bottom: 1px solid darken($bg-gray,12%);
 	&.nav-down {
 		background-color: rgba(white,.98);
 	}
@@ -72,7 +72,7 @@ nav {
 		display: block;
 		padding: 23px 15px;
 		font-size: 13px;
-
+		line-height: 24px;
 		.left {
 			padding: 0;
 		}
@@ -95,7 +95,7 @@ nav {
 				display:block;
 				text-align: center;
 				color: white;
-				font-family: $header-font-medium;
+				font-family: $hFontM;
 				font-size: 20px;
 				padding-top: 20px;
 				padding-bottom: 20px;
