--- a/src/scss/modules/_neighborhood_tiles.scss
+++ b/src/scss/modules/_neighborhood_tiles.scss
@@ -16,7 +16,7 @@
 		width: 100%;
 	}
 	h2 {
-		font-family: $header-font-family-medium-italic;
+		font-family: $hFontMI;
 		font-size: 28px;
 		margin-bottom: 60px;
 		margin-top: 10px;
