--- a/statamic/_themes/main/templates/company.html
+++ b/statamic/_themes/main/templates/company.html
@@ -6,7 +6,7 @@
 	</div>
 </div>
 </section>
-<section class="darkest-seafoam-bg">
+<section class="darkest-bg-seafoam">
 	<div class="container">
 		<div class="company beliefs">
 			<h2>OUR BELIEFS</h2>
@@ -27,7 +27,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="background-gray">
+	<section class="bg-gray">
 		<div class="container">
 			<div class="company inner-content">
 				<h2>OUR HISTORY</h2>
