--- a/statamic/_themes/main/templates/properties.html
+++ b/statamic/_themes/main/templates/properties.html
@@ -9,7 +9,7 @@
 		</div>
 	</div>
 </div>
-<section class="background-gray">
+<section class="bg-gray">
 	<div class="container">
 		{{ if get:type == "rent" }}
 
